 - GB Video: Fix potential hang when ending mode 0
 - GB Memory: Fix HDMA count starting in mode 0 (fixes mgba.io/i/855)
 - GB Memory: Actually load latch time from savestate
 - GB Serialize: Fix game title check
 - GB, GBA: Fix sync to video with frameskip
 - GB Audio: Fix NRx2 writes while active (fixes mgba.io/i/866)
 - GBA BIOS: Use core's VRAM variable instead of renderer's
Misc:
 - GBA Timer: Use global cycles for timers
 - GBA: Extend oddly-sized ROMs to full address space (fixes mgba.io/i/722)
 - All: Make FIXED_ROM_BUFFER an option instead of 3DS-only
 - Qt: Don't rebuild library view if style hasn't changed
 - Qt: Redo GameController into multiple classes
 - SDL: Fix 2.0.5 build on macOS under some circumstances
 - Test: Restructure test suite into multiple executables
 - Python: Integrate tests from cinema test suite
 - Util: Don't build crc32 if the function already exists
 - GBA: Detect hardware for Pokémon FireRed ROM hacks
 - CMake: Fix CPack dependencies for libpng 1.6

0.6.0: (2017-07-16)
Features:
 - Library view
 - Sprite viewer
 - Debugging console
 - Improved memory viewer
 - Memory search
 - Command line ability to override configuration values
 - Add option to allow preloading the entire ROM before running
 - Add option for whether rewinding restores save games
 - Savestates now contain any RTC override data
 - Add option to lock video to integer scaling
 - LR35902: Watchpoints
 - LR35902/GB-Z80 disassembler
 - GB: Tile viewer
 - GB: Video/audio channel enabling/disabling
 - GB: Symbol table support
 - GB MBC: Add MBC1 multicart support
 - GBA: Support printing debug strings from inside a game
 - GBA: Better cheat type autodetection
 - Implement keypad interrupts
 - Configuration of gamepad hats
 - Video log recording for testing and bug reporting
 - Debugger: Segment/bank support
 - Debugger: Execution tracing
 - Qt: German translation (by Lothar Serra Mari)
 - Qt: Spanish translation (by Kevin López)