@@ -67,7 +67,8 @@ enum {
 	SIZE_CART_SRAM = 0x00010000,
 	SIZE_CART_FLASH512 = 0x00010000,
 	SIZE_CART_FLASH1M = 0x00020000,
-	SIZE_CART_EEPROM = 0x00002000
+	SIZE_CART_EEPROM = 0x00002000,
+	SIZE_CART_EEPROM512 = 0x00000200
 };
 
 enum {
