@@ -528,16 +528,9 @@ size_t retro_get_memory_size(unsigned id) {
 	if (core->platform(core) == PLATFORM_GBA) {
 		switch (((struct GBA*) core->board)->memory.savedata.type) {
 		case SAVEDATA_AUTODETECT:
-		case SAVEDATA_FLASH1M:
 			return SIZE_CART_FLASH1M;
-		case SAVEDATA_FLASH512:
-			return SIZE_CART_FLASH512;
-		case SAVEDATA_EEPROM:
-			return SIZE_CART_EEPROM;
-		case SAVEDATA_SRAM:
-			return SIZE_CART_SRAM;
-		case SAVEDATA_FORCE_NONE:
-			return 0;
+		default:
+			return GBASavedataSize(&((struct GBA*) core->board)->memory.savedata);
 		}
 	}
 #endif
